# RTV_video_downloads

./: .gitignore  .project  .seznam20181207.txt.swp  README.md  cli.py  create_env.ps1  create_resources.ps1  create_resources.sh  download_videos_thread.py  download_videos_thread_one_thread.py  download_youtube_video_thread.py  main.pyw  pyproject.toml  requirements.txt  resources.qrc  rtv_video_downloader.spec  setup.cfg  setup.py  videoDownloader.pyw
.spyproject/: workspace.ini
data/history/: log_text_01-07-2019_22-16-02.txt  log_text_01-07-2019_22-27-21.txt  log_text_01-24-2019_20-46-40.txt  log_text_02-03-2019_21-09-25.txt  log_text_02-14-2019_21-12-52.txt  log_text_05-11-2019_23-34-15.txt  log_text_05-12-2019_10-34-30.txt  log_text_05-12-2019_10-34-43.txt  log_text_05-12-2019_19-25-13.txt  log_text_06-30-2019_20-01-09.txt  log_text_06-30-2019_21-46-04.txt  log_text_07-10-2019_22-29-02.txt  log_text_08-09-2018_14-15-56.txt  log_text_08-09-2018_14-41-43.txt  log_text_08-09-2018_14-54-55.txt  log_text_08-24-2018_22-07-59.txt  log_text_08-26-2018_21-02-50.txt  log_text_09-11-2018_19-44-31.txt  log_text_09-13-2018_22-08-37.txt  log_text_12-09-2018_20-53-36.txt
data/seznami/: Bojan_Znidarsic.txt  odbita-do-bita-sezona-2017-2018.txt  seznam-20180402.txt  seznam-20181207.txt  seznam-20190108.txt  seznam-20190120.txt  seznam-20190203.txt  seznam-20190220.txt  seznam-20190710.txt  seznam-20211222.txt  seznam-20220814.txt
docs/: RTV_video_download_ideas.ipynb
history/: log_text_01-07-2019_22-27-36.txt  log_text_01-07-2019_22-28-37.txt  log_text_01-20-2019_20-40-47.txt  log_text_01-24-2019_20-38-35.txt  log_text_01-31-2019_20-55-46.txt  log_text_01-31-2019_21-14-27.txt  log_text_02-20-2019_22-01-07.txt  log_text_03-11-2019_20-49-17.txt  log_text_05-11-2019_22-42-35.txt  log_text_05-11-2019_23-28-39.txt  log_text_05-12-2019_13-57-28.txt  log_text_06-30-2019_19-59-40.txt  log_text_08-06-2018_19-30-30.txt  log_text_08-09-2018_11-08-26.txt  log_text_08-09-2018_11-59-27.txt  log_text_10-04-2018_22-00-10.txt  log_text_10-11-2018_19-40-43.txt  log_text_12-07-2018_04-25-01.txt  log_text_12-09-2018_21-33-11.txt
rtv_video_downloader/: __main__.py  qrc_resources.py  rtv_videos_downloader.py  video_downloader.py  yt_videos_downloader.py
scripts/: build_deploy.ps1  create_env.ps1  create_resources.ps1  create_resources.sh
seznami/: rtv_download_20180709.txt  seznam-11102018.txt  seznam-20180806.txt  seznam-20181201.txt  seznam-20190131.txt  seznam-20190214.txt  seznam-20190512.txt  seznam-20190630.txt  seznam-20220208.txt  seznam-20221016.txt
src/rtv_video_downloader/: __init__.py  __main__.py  __version__.py  (+2 more)
