[metadata]
name = rtv_video_downloader
version = 0.2.0
description = Simple application to download videos from youtube or RTV SLO.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jeromlu/RTV_video_downloads
project_urls =
    Bug Tracker = https://github.com/jeromlu/RTV_video_downloads/issues
classifiers =
    Development Status :: 2 - Pre-Alpha,
    Intended Audience :: Developers,
    Natural Language :: English,
    Programming Language :: Python :: 3
    License :: GNU
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.10
packages = find:
tests_require = pytest
install_requires =
    pyqt6
    pytube
    requests

[options.entry_points]
console_scripts =
    rtv-video-downloader=rtv_video_downloader.__main__:launch_app

[options.packages.find]
exclude = tests

[flake8]
max-line-length=95
extend-ignore = E203
statistics=True

[mypy]
ignore_missing_imports = True

[pylint]
disable = C0330, C0326
max-line-length = 95
